@@ -23,7 +23,11 @@ package cascading.operation;
 
 import cascading.tuple.TupleEntry;
 
-/** Interface Filter ... */
+/**
+ * Interface Filter marks a given {@link Operation} as a filter, as opposed to being a {@link Function}.
+ * <p/>
+ * It is important that all filters call {@code super(ANY,Fields.ALL); } in their constructors.
+ */
 public interface Filter
   {
   /**
