@@ -2,6 +2,8 @@ Cascading Change Log
 
 Unreleased
 
+  Added a Debug filter that will print to either stderr or stdout. Useful for debugging stream transformations.
+
   Added CascadingTestCase base test class
 
   Added Insert Function that allows for literal values to be inserted into the Tuple stream.
